--- a/html/index.html
+++ b/html/index.html
@@ -1,2 +1,21 @@
+<html>
+
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <title>Sentiment Analysis</title>
+        <link rel="icon" type="image/jpg" href="./img/favicon.png" />
+        <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+        <script type="text/javascript" src="./js/jquery-1.12.3.js"></script>
+        <script type="text/javascript" src="./js/jquery-migrate-1.2.1.js"></script>
+        <script type="text/javascript" src="./js/bootstrap.js"></script>
+        <script type="text/javascript" src="./js/my.js"></script>
+        <link rel="stylesheet" href="./css/bootstrap.css">
+        <link rel="stylesheet" href="./css/my.css">
+    </head>
+
+    <body>
 <script>
+ 	$(function(){
+
+ 	});
 </script>
